...
                },
                fontFamily = poppins,
                fontWeight = FontWeight.Normal,
                fontSize = 18.sp
            )
            Spacer(modifier = Modifier.height(15.dp))
            college = dropDown("학과")
            Spacer(modifier = Modifier.height(50.dp))
            Text(
                modifier = Modifier.width(270.dp),
                text = buildAnnotatedString {
                    append("학번을 선택하세요. ")
                    withStyle(SpanStyle(color = Color.Red)) { append("*") }
                },
                fontFamily = poppins,
                fontWeight = FontWeight.Normal,
                fontSize = 18.sp
            )
            Spacer(modifier = Modifier.height(15.dp))
            studentId = dropDown("학번")
            Spacer(modifier = Modifier.height(50.dp))
            Text(
                modifier = Modifier.width(270.dp),
                text = buildAnnotatedString {
                    append("관심사를 선택하세요. ")
                    withStyle(SpanStyle(color = Color.Red)) { append("*") }
...
                },
                fontFamily = poppins,
                fontWeight = FontWeight.Normal,
                fontSize = 18.sp
            )
            Spacer(modifier = Modifier.height(15.dp))
            interest = multiSelectDropDown("나의 관심 분야")
            Spacer(modifier = Modifier.height(80.dp))
            CommonBlueButton(
                text = "다음",
                onClick = {
                    if (isTest) {
                        loginNavController.navigate(LoginRoute.SignupTerms.route)
                    }
                    if (nickname == "" || college == "" || studentId == "" || interest == listOf("")) {
                        Toasty
...
    }
}

fun convertToEnglish(input: String): String {
    val output: String =
        when (input) {
            "경영대학" -> {
                "Business"
            }

            "공과대학" -> {
                "Engineering"
            }

            "미술대학" -> {
                "Art"
            }
...
            }

            "18학번" -> {
                "18"
            }

            "19학번" -> {
                "19"
            }

            "20학번" -> {
                "20"
            }

            "21학번" -> {
                "21"
            }

            "22학번" -> {
                "22"
            }
...
            }

            "연극" -> {
                "theater"
            }

            "음악" -> {
                "music"
            }

            "운동" -> {
                "sports"
            }

            "예술" -> {
                "art"
            }

            "종교" -> {
                "religion"
            }
...
