...
                            }
                        }
                    ) { CheckBox(color = if (isAllChecked) ButtonBlue else ButtonGrey) }
                    Spacer(modifier = Modifier.width(10.dp))
                    Text(
                        modifier = Modifier.width(220.dp),
                        text = "전체 동의",
                        fontFamily = poppins,
                        fontWeight = FontWeight.Medium,
                        fontSize = 16.sp
                    )
                }
                Spacer(modifier = Modifier.height(20.dp))
...

                if (isTermsChecked && isPolicyChecked) isAllChecked = true

                Spacer(modifier = Modifier.height(80.dp))
                if (isTermsChecked && isPolicyChecked) {
                    CommonBlueButton(
                        text = "동의 후 회원가입",
                        onClick = {
                            /*TODO 버튼 누르면 임시 저장했던 가입 정보 전부 DB에 저장*/
                        }
                    )
                } else CommonGreyButton(text = "동의 후 회원가입")
                Spacer(modifier = Modifier.height(45.dp))
...
                                isTermsModal = false
                                isPolicyModal = false
                            },
                        contentAlignment = Alignment.Center
                    ) {
                        Text(
                            text = "닫기",
                            fontFamily = poppins,
                            fontWeight = FontWeight.Normal,
                            fontSize = 15.sp,
                            textAlign = TextAlign.Center,
                            textDecoration = TextDecoration.Underline
                        )
...
